--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +776,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "re = model(torch.Tensor(X_test.reshape(2000,1,16))).detach().numpy()"
+    "re = model(torch.Tensor(X_test.reshape(2000,1,16))).detach().numpy()\n",
+    "re = re.reshape(2000)\n",
+    "true = Y_test.numpy()\n",
+    "dataframe = pd.DataFrame([re, true]).T\n",
+    "dataframe.columns = ['pred','truth']\n",
+    "dataframe['error'] = np.abs(dataframe['pred'] - dataframe['truth'])\n",
+    "dataframe['percentage'] = dataframe['error']/np.abs(dataframe['truth'] )"
    ]
   },
   {
@@ -784,38 +790,28 @@
    "execution_count": 114,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "re = re.reshape(2000)\n",
-    "true = Y_test.numpy()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 115,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dataframe = pd.DataFrame([re, true]).T\n",
-    "dataframe.columns = ['pred','truth']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 116,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dataframe['error'] = np.abs(dataframe['pred'] - dataframe['truth'])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 117,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dataframe['percentage'] = dataframe['error']/np.abs(dataframe['truth'] )"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
